<resources>
    <string name="app_name">ITE Online Shop</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="products">Products</string>
    <string name="search">Search products</string>
    <string name="myProfile">My Profile</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
</resources>